# mcp-financial-datasets

./: .env.example  .gitignore  README.md  financial_datasets_server.py  pyproject.toml
mcp_financial_datasets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_financial_datasets_server.py
